--- a/showeq/trunk/CHANGES
+++ b/showeq/trunk/CHANGES
@@ -1,3 +1,10 @@
+fee (03/02/02)
+-------------------
+
+Applied remainder of patch #503766. see patch manager for details.
+New Acrylia map.
+
+
 ratt (31/Jan/02)
 -------------------
 
