--- a/showeq/branches/pre_5_0_dev/TODO
+++ b/showeq/branches/pre_5_0_dev/TODO
@@ -10,16 +10,13 @@ A full "to do" list is maintained on SourceForge
    packets. 
  + More general packet cleanup.
 + Move all non-GUI related stuff out of EQInterface
-+ Move terminal UI to its own class
 + Improved filtering system
 + Map
  + Support multiple user configurable icons (for spawns, pc's, items, etc...)
  + Support display of zone safepoint (from zone packet)
  + Support map editing
  + Support simple map optimization
-+ New message storage, filtering, and UI.
++ Finish new message filtering
 + Support for LoY guild information capture/display.
-+ Redo the base UI so that it is loaded from a QT .ui file to make it easier
-  for the users to reconfigure/add stuff.
 + Seperate UI from data storage/handling in Combat Window and Experience Window
 + Create new and improved item db support.
