Player default handling changed. Also moved yet more stuff out of ShowEQParams.

--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -52,6 +52,8 @@ dohpaZ (11/?/03)
   being handled.
 + Found zonePoint in doorStruct.  Added zone point destination information 
   to map tooltip for teleport doors.
++ Modifed default player characteristic handling.  Made the code more 
+  responsive to configuration changes.
 
 dohpaZ (10/24/03)
 ---------------------
