Integrated patch# 844078 ZEM Display with fixes.

--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -68,6 +68,7 @@ dohpaZ (12/5/03)
 + Integrated patch# 844078 "Fix to class displays" by belith (UnGod).
 + Integrated patch# 851037 "New map for Mistmoore" by showeqfan & Boredmapper
 + Integrated patch# 850894 "Map for Cabilis West" by showeqfan
++ Integrated patch# 846353 "ZEM Display" by archpriest (with fixes).
 + Added mir{a-j], mmc[a-j], and ruj[a-j] LDoN maps.
 
 dohpaZ (10/24/03)
