Updated configure.in to enforce the use of autoconf 2.5 or higher.  Updated ArqSeqGiveUp's default value to 512 to reduce false packet misses.  Removed extraneous cruft from ShowEQParams and the command line options.

--- a/showeq/branches/pre_5_0_dev/CHANGES
+++ b/showeq/branches/pre_5_0_dev/CHANGES
@@ -1,5 +1,16 @@
 Version: $Id$ $Name$
 
+dohpaZ (12/?/03)
+---------------------
++ Updated version to 5.0.0.2
++ Added code to configure.in to force the use of autoconf 2.5 or higher and 
+  updated the documentation to reflect the new version requirement.
++ Updated the default ArqSeqGiveUp to 512 since with the current encryption
+  scheme a single missed packet can have greater ramifications then under the
+  previous one.
++ Removed some extraneous command line options.
++ Removed some more cruft from ShowEQParams.
+
 dohpaZ (12/7/03)
 ---------------------
 + Updated version to 5.0.0.1
