--- a/showeq/branches/pre_5_0_beta/INSTALL
+++ b/showeq/branches/pre_5_0_beta/INSTALL
@@ -35,7 +35,7 @@ Below is a list of packages you will need in order to compile ShowEQ:
 
    *** GNU tools ***
    libtool    1.3.4-3   Most recent...
-   autoconf   2.13-1    Most recent...
+   autoconf   2.13      Most recent...
    automake   1.4-6     Most recent...
    -----------------------------------
    
