--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,5 +1,13 @@
 Version: $Id$ $Name$
 
+dohpaZ (02/14/04)
+---------------------
++ Updated version to 5.0.0.6
++ Patch to fix QCursor issue.
++ More updates to work with 02/10/04 EQLive
++ Added the "Dockable" sub-menu to the View menu to control the dockability 
+  of various windows.
+
 dohpaZ (02/11/04)
 ---------------------
 + Updated version to 5.0.0.5
