Added Codepigs patch to make work with 5/5/04 patch

--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,5 +1,10 @@
 Version: $Id$ $Name$
 
+BonkersBobcat (05/06/04)
+------------------------
++ Updated version to 5.0.0.8
++ Added CodePigs fix to work with 05/05/04 patch
+
 dohpaZ (02/18/04)
 ---------------------
 + Updated version to 5.0.0.7
