ksmith's patch to add new zones

--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,4 +1,11 @@
 Version: $Id$ $Name$
+BonkersBobcat (08/12/04)
+------------------------
++ Updated version to 5.0.0.12
++ Note that maps are not currently loading
++ Applied ksmith's patch to add the new zones
++ Applied UnGod's patch for the guild file (finally)
+
 
 BonkersBobcat (07/14/04)
 ------------------------
