added playarone's chat patch

--- a/showeq/branches/pre_5_0_beta/CHANGES
+++ b/showeq/branches/pre_5_0_beta/CHANGES
@@ -1,11 +1,11 @@
 Version: $Id$ $Name$
-BonkersBobcat (08/12/04)
+BonkersBobcat (08/13/04)
 ------------------------
 + Updated version to 5.0.0.12
 + Applied epiccamp patch for maps to load
 + Applied ksmith's patch to add the new zones
 + Applied UnGod's patch for the guild file (finally)
-
++ Applied PlayarOne's patch for chat channel
 
 BonkersBobcat (07/14/04)
 ------------------------
