--- a/showeq/branches/pre_5_0_beta/INSTALL
+++ b/showeq/branches/pre_5_0_beta/INSTALL
@@ -29,14 +29,14 @@ Below is a list of packages you will need in order to compile ShowEQ:
    db3        3.2.9  3.3 (No db4 won't work)
 
    *** C++ Compilation ***
-   glibc      2.2  2.3.2
-   libstdc++  3.0  3.2
-   gcc        3.0  3.2
+   glibc      2.2  2.3.3
+   libstdc++  3.0  Most recent...
+   gcc        3.0  Most recent...
 
    *** GNU tools ***
    libtool    1.3.4-3   Most recent...
-   autoconf   2.13      Most recent...
-   automake   1.4-6     Most recent...
+   autoconf   2.54      Most recent...
+   automake   1.6       Most recent...
    -----------------------------------
    
 NOTE: Higher versions of these libraries should work fine...
