More kdevelop related tweaks

--- a/showeq/branches/pre_v5_0_dev2/ChangeLog
+++ b/showeq/branches/pre_v5_0_dev2/ChangeLog
@@ -1,5 +1,10 @@
 Version: $Id$ $Name$
 
+dohpaZ (09/29/04)
+------------------------
++ More kdevelop project related tweaks.
++ Added Doxyfile for DOxygen related configuration.
+	
 dophaZ (09/27/04)
 ------------------------
 + Added kdevelop project.
