Doxygen support and a couple bug fixes/robustness modifications.

--- a/showeq/branches/pre_v5_0_dev2/AUTHORS
+++ b/showeq/branches/pre_v5_0_dev2/AUTHORS
@@ -17,5 +17,6 @@ ChangeLog	Megaton, Zaphod, et. al.
 ROADMAP		Zaphod
 TODO		Zaphod
 BUGS		Zaphod
+m4/doxygen.m4   Oren Ben-Kiki <oren@ben-kiki.org>
 
 
