--- a/showeq/branches/pre_5_0_beta/AUTHORS
+++ b/showeq/branches/pre_5_0_beta/AUTHORS
@@ -17,5 +17,6 @@ ChangeLog	Megaton, Zaphod, et. al.
 ROADMAP		Zaphod
 TODO		Zaphod
 BUGS		Zaphod
+m4/doxygen.m4   Oren Ben-Kiki <oren@ben-kiki.org>
 
 
